Build: fix a bunch of deprecation warnings and no non-consumed apt arg (#8436)
* Adds the immutables APT to prevent the unnecessary warning about the
  not consumed APT command line option.
* Add `-Xlint:deprecation` for Java 9+ (see comment in
  `nessie-java.gradle.kts`)
* Fix a bunch of deprecation warnings
* Fix a few other compiler & IDE warnings