@@ -21,7 +21,7 @@ import static org.assertj.core.api.Assertions.assertThat;
 import com.google.common.collect.ImmutableMap;
 import java.io.IOException;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
 import java.util.HashSet;
 import java.util.Map;
 import java.util.Set;
@@ -44,7 +44,7 @@ public class DeviceCodeResourceOwnerEmulator extends InteractiveResourceOwnerEmu
   private static final Pattern USER_CODE_PATTERN =
       Pattern.compile(Pattern.quote(DeviceCodeFlow.MSG_PREFIX) + "[A-Z]{4}-[A-Z]{4}");
 
-  private URL authUrl;
+  private URI authUrl;
   private String userCode;
 
   private volatile boolean denyConsent = false;
@@ -87,9 +87,9 @@ public class DeviceCodeResourceOwnerEmulator extends InteractiveResourceOwnerEmu
     try {
       LOGGER.info("Starting device code flow.");
       Set<String> cookies = new HashSet<>();
-      URL loginPageUrl = enterUserCode(authUrl, userCode, cookies);
+      URI loginPageUrl = enterUserCode(authUrl, userCode, cookies);
       if (loginPageUrl != null) {
-        URL consentPageUrl = login(loginPageUrl, cookies);
+        URI consentPageUrl = login(loginPageUrl, cookies);
         authorizeDevice(consentPageUrl, cookies);
       }
       LOGGER.info("Device code flow completed.");
@@ -100,8 +100,8 @@ public class DeviceCodeResourceOwnerEmulator extends InteractiveResourceOwnerEmu
   }
 
   /** Emulate user entering provided user code on the authorization server. */
-  private URL enterUserCode(URL codePageUrl, String userCode, Set<String> cookies)
-      throws IOException {
+  private URI enterUserCode(URI codePageUrl, String userCode, Set<String> cookies)
+      throws Exception {
     LOGGER.info("Entering user code...");
     // receive device code page
     getHtmlPage(codePageUrl, cookies);
@@ -109,7 +109,7 @@ public class DeviceCodeResourceOwnerEmulator extends InteractiveResourceOwnerEmu
     HttpURLConnection codeActionConn = openConnection(codePageUrl);
     Map<String, String> data = ImmutableMap.of("device_user_code", userCode);
     postForm(codeActionConn, data, cookies);
-    URL loginUrl;
+    URI loginUrl;
     if (username != null && password != null) {
       // Expect a redirect to the login page
       loginUrl = readRedirectUrl(codeActionConn, cookies);
@@ -123,23 +123,26 @@ public class DeviceCodeResourceOwnerEmulator extends InteractiveResourceOwnerEmu
   }
 
   /** Emulate user consenting to authorize device on the authorization server. */
-  private void authorizeDevice(URL consentPageUrl, Set<String> cookies) throws IOException {
+  private void authorizeDevice(URI consentPageUrl, Set<String> cookies) throws Exception {
     LOGGER.info("Authorizing device...");
     // receive consent page
     String consentHtml = getHtmlPage(consentPageUrl, cookies);
     Matcher matcher = FORM_ACTION_PATTERN.matcher(consentHtml);
     assertThat(matcher.find()).isTrue();
-    String formAction = matcher.group(1);
+    URI formAction = URI.create(matcher.group(1));
     matcher = HIDDEN_CODE_PATTERN.matcher(consentHtml);
     assertThat(matcher.find()).isTrue();
     String deviceCode = matcher.group(1);
     // send consent form
-    URL consentActionUrl =
-        new URL(
-            consentPageUrl.getProtocol(),
+    URI consentActionUrl =
+        new URI(
+            consentPageUrl.getScheme(),
+            null,
             consentPageUrl.getHost(),
             consentPageUrl.getPort(),
-            formAction);
+            formAction.getPath(),
+            formAction.getQuery(),
+            null);
     HttpURLConnection consentActionConn = openConnection(consentActionUrl);
     Map<String, String> data =
         denyConsent
